# ai-first-scraper-mcp

./: Dockerfile  README.md  llms.txt  pyproject.toml  server.json  smithery.yaml
src/ai_first_scraper_mcp/: __init__.py  server.py
