[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-first-scraper-mcp"
version = "1.0.0"
description = "MCP server that gives any LLM agent ad-free Markdown web scraping and search."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "yubinkim444" }]
keywords = ["mcp", "ai-agents", "llm", "claude", "cursor", "cline", "web-scraping", "markdown", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/yubinkim444/ai-first-scraper-mcp"
Repository = "https://github.com/yubinkim444/ai-first-scraper-mcp"
Issues = "https://github.com/yubinkim444/ai-first-scraper-mcp/issues"

[project.scripts]
ai-first-scraper-mcp = "ai_first_scraper_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_first_scraper_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]
